more edits, added kiloseq pipeline image

--- a/chapter1.tex
+++ b/chapter1.tex
@@ -180,7 +180,7 @@ The second category of features focuses on evolutionary conservation. For each a
 \end{figure}
 \end{landscape}
 
-We assessed the performance of the imputation model using cross-validation. Surprisingly, we found the root-mean-squared deviation (RMSD) of imputed values to be on par with measurement error in experimentally measured data (Figure~\ref{fig:imputation}A). An examination of the prediction performance by location showed increased error in positions with lower mutation density and for variants with in above-WT fitness levels (Figure~\ref{fig:imputation}B). As an additional validation step, we performed manual complementation assays for a set of UBE2I variants that were not present in the machine learning training data set and compared the results against the predictions (Figure~\ref{fig:imputation}C), again finding a surprisingly strong agreement. Notably, variants showing above wild-type level growth in the manual assay were generally predicted to be deleterious. Although above-WT complementation may indicate that a variant is adaptive in yeast, the imputation models suggested that these variants would be deleterious in humans, a hypothesis we explore further in chapter~3. 
+We assessed the performance of the imputation model using cross-validation. Surprisingly, we found the root-mean-squared deviation (RMSD) of imputed values to be on par with measurement error in experimentally measured data (Figure~\ref{fig:imputation}A). An examination of the prediction performance by location showed increased error in positions with lower mutation density and for variants with in above-WT fitness levels (Figure~\ref{fig:imputation}B). As an additional validation step, we performed manual complementation assays for a set of UBE2I variants that were not present in the machine learning training data set and compared the results against the predictions (Figure~\ref{fig:imputation}C), again finding a surprisingly strong agreement. Notably, variants showing above wild-type level growth in the manual assay were generally predicted to be deleterious. Although above-WT complementation may indicate that a variant is adaptive in yeast, the imputation models suggested that these variants would be deleterious in humans, a hypothesis we explore further in chapter~\ref{ch:data2}. 
 
 
 An analysis of feature importance can be performed by comparing the increase in means squared prediction error upon permuting the values of a feature in question. The analysis revealed that intrinsic features were the most informative (Figure~\ref{fig:imputation}D), with the weighed position-wise average and multi-mutant average seen to be the two single most important features (49\% and 40\%, respectively), while the multiplicative model contributed 14\%. The second most important group was conservation information, with PROVEAN and SIFT weighing in at 39\% and 32\%, respectively.
@@ -213,7 +213,9 @@ The use of codon-replacement mutagenesis allowed us to observe a fuller repertoi
 
 \paragraph{Oxidized nucleotide PCR: } Oxidized nucleotide PCR was performed by Jennifer Knapp as previously described by Mohan and colleagues~\cite{mohan_pcr_2011}. Primers were designed to attach attB sites to the product in preparation for Gateway cloning.
 
-\paragraph{POPCode:} POPCode oligos are generated using the POPCodeSuite webtool I created. Given a target oligo length and a maximum length offset, the tool calculates for every codon in the target gene the set of possible oligos conforming to the length and offset parameters. Then, melting temperatures for the 5' and 3' halves of each oligo are calculated. For each codon, the oligo that most closely matches the median 5' and 3' melting temperatures is chosen. Based on parameters derived previous observations, the expected mutation frequency is calculated for each oligo and used to simulate variant coverage rates at different library sizes. The source code is provided on the attached storage media and can also be found online\footnote{http://dalai.mshri.on.ca/$\sim$jweile/projects/popcodeSuite/}.
+\paragraph{POPCode:} POPCode oligos are generated using the POPCodeSuite webtool I created. Given a target oligo length and a maximum length offset, the tool calculates for every codon in the target gene the set of possible oligos conforming to the length and offset parameters. Then, melting temperatures for the 5' and 3' halves of each oligo are calculated. For each codon, the oligo that most closely matches the median 5' and 3' melting temperatures is chosen. Based on parameters derived previous observations, the expected mutation frequency is calculated for each oligo and used to simulate variant coverage rates at different library sizes. The source code is provided on the attached storage media and can also be found online\footnote{
+\url{http://dalai.mshri.on.ca/~jweile/projects/popcodeSuite/}
+}.
 
 POPCode mutagenesis was performed by Atina Cote, Jennifer Knapp and Marta Verby in the following steps: (i) A uracil-containing wild type template was generated by PCR-amplifying the ORF in the presence of dUTP, (ii) pooled oligonucleotides were hybridized with the template and gaps between hybridized oligonucleotides were filled with the non-strand-displacing Sulpholobus Polymerase IV (NEB) or Kapa HiFi Uracil+ DNA polymerase (KapaBiosystems) and sealed with T4 DNA ligase (NEB), (iii) the uracil-doped wild-type template was then degraded using Uracil-DNA-Glycosylase (UDG) (NEB) and the mutagenesis product was amplified with attB-sites-containing primers to allow the downstream Gateway BP cloning.
 
@@ -223,16 +225,25 @@ POPCode mutagenesis was performed by Atina Cote, Jennifer Knapp and Marta Verby 
 
 KiloSeq library preparation was performed by Atina Cote, Jennifer Knapp and Marta Verby. 384-well plates are prepared with PCR mastermix, where each well contains differently tagged oligos representative its respective well coordinate. A BioMatrix robot is used to stamp clones directly from the library plates into the wells. Colony PCR is performed directly in the plates using a HydroCycler. Wells across each plate are then pooled and fragmented using Nextera Tn5 tagmentation. Fragments carrying the well-specific tags within each pool are then re-amplified using primers carrying Illumina i5/i7 linkers with plate-specific indices. Finally, the products are pooled, purified and size selected.
 
-Sequencing data is processed using a custom pipeline I developed that runs on a high-performance computing cluster. The source code is provided on the attached storage media and can also be found online\footnote{http://dalai.mshri.on.ca/$\sim$jweile/projects/kiloseq/}.
 
-After identification of desirable clones using KiloSeq, the selected clones were condensed into a smaller library using the BioMatrix Robot. I created a custom software library to automatically program the BioMatrix Robot's picking protocol. It is provided on the attached storage media and can also be found online\footnote{http://dalai.mshri.on.ca/$\sim$jweile/projects/biomatrix/}.
+\begin{figure}[h!]
+	\centering
+	\includegraphics[width=.6\textwidth]{img/kiloseq_pipeline.pdf}
+	\caption{KiloSeq analysis pipeline: \texttt{bcl2fastq} is used to demultiplex by plate. The resulting FASTQ files are broken up in to chunks and feed to worker nodes on the fly. Each worker identifies well-tags in the R2 reads and demultiplexes by well accordingly. After demultiplexing is complete, jobs for each well in each plate are distributed across worker nodes. There, barcode sequences are extracted and clustered based on Levenshein distance. R1 reads from each cluster are aligned to the ORF reference and pileups are generated, which are used for variant calling and long indel detection (via recognition of sudden changes in read depth using a modified Sobel filter.)}
+	\label{fig:kiloseqPipeline}
+\end{figure}
+
+
+Sequencing data is processed using a custom pipeline I developed that runs on a high-performance computing cluster (Figure~\ref{fig:kiloseqPipeline}). The source code is provided on the attached storage media and can also be found online\footnote{\url{http://dalai.mshri.on.ca/~jweile/projects/kiloseq/}}.
+
+After identification of desirable clones using KiloSeq, the selected clones were condensed into a smaller library using the BioMatrix Robot. I created a custom software library to automatically program the BioMatrix Robot's picking protocol. It is provided on the attached storage media and can also be found online\footnote{\url{http://dalai.mshri.on.ca/~jweile/projects/biomatrix/}}.
 
 \subsection{DMS-BarSeq}
 
 \paragraph{Complementation competition experiment:} Complementation experiments were performed by Jennifer Knapp, Song Sun and Marta Verby. After pooling the barcoded \gene{UBE2I} variant library it was transformed \textit{en masse} together with barcoded null and wildtype controls into an \species{S. cerevisiae} \textit{ubc9-ts} strain. 
 The pool was grown in triplicates on solid media at 25\celsius\ and 37\celsius\ to be examined at 5 different timepoints (0h, 6h, 12h, 24h, 48h), which required a total of 30 plates. At their respective timepoints, plates were scraped, OD quantified, and their barcode loci amplified with primers carrying sample-specific tags. The amplified product is then sequenced on an Illumina NextSeq 500.
 
-\paragraph{Sequence analysis:} I created a custom sequence analysis pipeline, which was used to identify and count individual sample tags and barcode combinations within each read. The pipeline source code is provided on the attached storage media and can also be found online\footnote{http://dalai.mshri.on.ca/$\sim$jweile/projects/screen\_pipeline/}.
+\paragraph{Sequence analysis:} I created a custom sequence analysis pipeline, which was used to identify and count individual sample tags and barcode combinations within each read. The pipeline source code is provided on the attached storage media and can also be found online\footnote{\url{http://dalai.mshri.on.ca/~jweile/projects/screen_pipeline/}}.
 
 \paragraph{Scoring:} I developed a custom software to perform scoring and statistical analysis. First, the relative population size for each clone is calculated by dividing each clone's barcode count by the total number of barcodes in each condition. Then the estimated absolute population size for each clone is calculated by multiplying the relative population size with the estimated total number of cells on the respective plate at the corresponding time point (obtained from OD measurements). We then treat the amount of growth between each individual time point compared to the pool average as an individual estimate of fitness, all of which act cumulatively. This is calculated as follows: Let $c_{i,t_k}^\tau$ be the barcode count for clone $i$, timepoint $t_k$ at temperature $\tau$, then $ \forall i \in \{1 \le i \le N | i \in \mathbb{N} \}$, 
 $\forall k \in \{1 \le k \le 5 | k \in \mathbb{N} \}$, 
@@ -251,9 +262,11 @@ s'_i &= \frac{s_i - s_\text{null}}{s_\text{wt} - s_\text{null}},
 
 where $r_{i,t_k}^{(\tau)}$ is the relative population size for clone $i$ and timepoint $t_k$ at temperature $\tau$, $P_{i,t_k}^{(\tau)}$ is the absolute population size for clone $i$, timepoint $t_k$ at temperature $\tau$, $\rho_{i,t_k}^{(\tau)}$ is the measured hourly growth rate for clone $i$, timepoint $t_k$ at temperature $\tau$, $\phi_{i,t_k}^{(\tau)}$ is the fitness advantage relative to the pool growth for clone $i$, timepoint $t_k$ at temperature $\tau$, $\phi_{i,t_k}^\prime$ is the normalized relative fitness advantage for clone $i$ at timepoint $t_k$, and $s_i$ is the cumulative normalized relative fitness advantage for clone $i$. Finally, $s'_i$ is the fitness score relative to the internal null and wild type controls. This results in null-like mutants receiving a score of zero and wild type-like mutants receiving a score of one.
 
-The scoring software is part of a larger DMS analysis package provided on the attached storage media. It is also available online\footnote{http://dalai.mshri.on.ca/$\sim$jweile/projects/popcodePipeline/doc}.
+The scoring software is part of a larger DMS analysis package provided on the attached storage media. It is also available online\footnote{\url{http://dalai.mshri.on.ca/~jweile/projects/popcodePipeline/doc}}.
 
-\paragraph{Error regularization: } Standard error measurements for each clone were regularized using a Bayesian method published by Baldi and Long~\cite{baldi_bayesian_2001}. A prior estimate for each measurement were obtained via linear regression over permissive read counts and fitness value. The prior is combined with the empirical standard deviation obtained from technical replication using Baldi and Long's original formula $$\sigma^2 = \frac{v_n \sigma_n^2}{v_n - 2} = \frac{v_0 \sigma_0^2 + (n-1)s^2}{v_0 + n - 2},$$ where $v_0$ represents the degrees of freedom assigned to the prior estimate, $\sigma_0$ is the prior estimate, $n$ represents the degrees of freedom for the empirical data (i.e. the number of replicates) and $s$ is the empirical standard deviation.
+\paragraph{Error regularization: } Standard error measurements for each clone were regularized using a Bayesian method published by Baldi and Long~\cite{baldi_bayesian_2001}. A prior estimate for each measurement was obtained via linear regression over permissive read counts and fitness values. The prior is combined with the empirical standard deviation obtained from technical replication using Baldi and Long's original formula $$\sigma^2 = \frac{v_n \sigma_n^2}{v_n - 2} = \frac{v_0 \sigma_0^2 + (n-1)s^2}{v_0 + n - 2},$$ where $v_0$ represents the degrees of freedom assigned to the prior estimate, $\sigma_0$ is the prior estimate, $n$ represents the degrees of freedom for the empirical data (i.e. the number of replicates) and $s$ is the empirical standard deviation.
+
+The error regularization procedure is part of a larger DMS analysis package provided on the attached storage media. It is also available online\footnote{\url{http://dalai.mshri.on.ca/~jweile/projects/popcodePipeline/doc}}.
 
 
 \subsection{DMS-TileSeq}
@@ -262,24 +275,37 @@ The scoring software is part of a larger DMS analysis package provided on the at
 The complementation experiment was performed by Song Sun and Marta Verby in much the same way as for DMS-TileSeq, but only in duplicates rather than triplicates and only a single 48h timepoint.
 
 \paragraph{TileSeq Sequencing:} Oligos were designed to evenly distribute across the sequence of the \gene{UBE2I} ORF in 60bp intervals and used to amplify individual sequence tiles. The resulting product was used in paired-end sequencing. A custom script was used to align reads to the \gene{UBE2I} template to identify and count variants detected by both reads in each pair. Mutation counts in each condition are normalized to sequencing depth at the respective position. Then, wildtype control counts are subtracted from the selective and permissive condition counts. Finally, the log ratio between adjusted selective and permissive counts is calculated. Error regularization was performed the same way as in DMS-BarSeq. 
-The scoring procedure is implemented as part of a larger DMS analysis package provided on the attached storage media. It is also available online\footnote{http://dalai.mshri.on.ca/$\sim$jweile/projects/popcodePipeline/doc}.
+The scoring procedure is implemented as part of a larger DMS analysis package provided on the attached storage media. It is also available online\footnote{\url{http://dalai.mshri.on.ca/~jweile/projects/popcodePipeline/doc}}.
 
 \subsection{Joining of maps, imputation and regularization}
 
-While DMS-TileSeq produces only one fitness score per variant, DMS-BarSeq in many cases contains multiple biological replicates of the same variant associated with different barcodes. To provide summary fitness values on a per-variant basis scores from biological replicates were combined using weighted means, where the weight is inversely proportional to the Bayesian regularizes standard error. The standard error assocated with the joint score is also adjusted to account for difference input fitness measurements and increased sample size.
-The results from the barcoded and regional sequencing screens do not scale linearly to each other. We used regression to find a monotonic transformation function $f(x) = a \cdot e^x + b \cdot x + c$ between the two screens' respective scales. The standard deviation is transformed accordingly using a Taylor series approximation. After both datasets have been brought to the same scale we can join corresponding data points using weighted means, where the weight is again inversely proportional to the Bayesian regularized standard error. Output standard error was adjusted as before. 
+While DMS-TileSeq produces only one fitness score per variant, DMS-BarSeq in many cases contains multiple biological replicates of the same variant associated with different barcodes. To provide summary fitness values on a per-variant basis, scores from biological replicates were combined using weighted means, where the weight is inversely proportional to the Bayesian regularized standard error. The standard error associated with the joint score is also adjusted to account for differences in input fitness measurements and increased sample size.
+The results from the barcoded and regional sequencing screens do not scale linearly with each other. We used regression to find a monotonic transformation function $$f(x) = a \cdot e^x + b \cdot x + c$$ between the two screens' respective scales. The standard deviation is transformed accordingly using a Taylor series-based approximation. $$ \sigma' = \sigma \cdot (a\cdot e^{\mu} + b)  $$ After both datasets have been brought to the same scale we can join corresponding data points using weighted means, where the weight is again inversely proportional to the Bayesian regularized standard error. Output standard error was adjusted again to account for differences in input fitness values and increased sample size. 
+\begin{align*}
+w_0 &= \frac{1}{1+\frac{\sigma_{\bar x}^{(0)}}{\sigma_{\bar x}^{(1)}}}; ~ w_1 = \frac{1}{1+\frac{\sigma_{\bar x}^{(1)}}{\sigma_{\bar x}^{(0)}}}\\
+\mu_\text{joint} &= w_0 \cdot \mu_0 + w_1 \cdot \mu_1\\
+\sigma_\text{joint} &= w_0 \cdot (\sigma_0^2 + \mu_0^2) + w_1 \cdot (\sigma_1^2 + \mu_1^2) - \mu_\text{joint}^2\\
+\sigma_{\bar x}^{(\text{joint})} &= \frac{\sigma_\text{joint}}{\sqrt{df_0 + df_1}}
+\end{align*}
+where $\mu_0$ is the DMS-BarSeq value, $\sigma_0$ the associated standard deviation, $\sigma_{\bar x}^{(0)}$ the associated standard error, $df_0$ the associated degrees of freedom, $\mu_1$ is the DMS-TileSeq value, $\sigma_1$ the associated standard deviation, $\sigma_{\bar x}^{(1)}$ the associated standard error, and $df_1$ the associated degrees of freedom.
 
-Imputation of missing values was performed using RandomForest Regression~\cite{breiman_random_2001}. The following intrinsic features were generated: The confidence-weighted average fitness across mutations at the same position; The average fitness of multi-mutant clones that contain the mutation of interest; the estimated fitness according to a multiplicative model to infer mutant fitness A using a double mutant AB and single mutant B.
-A second set of features was computed from differences between various chemical properties of the wildtype and mutant amino acids. These properties include size, volume, polarity, charge, hydropathy.
-A third set of features is derived from the structural context of each amino acid position. This includes secondary structure, solvent accessibility, burial in interfaces with different interaction partners and involvement in hydrogen bonds or salt bridges with interaction partners. Secondary structures were calculated using Stride~\cite{frishman_knowledge-based_1995}. Solvent accessibility and interface burial were calculated using the GETAREA tool~\cite{fraczkiewicz_exact_1998} on the following PDB entries: 3UIP~\cite{gareau_determinants_2012}; 4W5V~\cite{reiter_characterization_2016}; 3KYD~\cite{olsen_active_2010}; 2UYZ~\cite{knipscheer_noncovalent_2007}; 4Y1L~\cite{alontaga_rwd_2015}. Hydrogen bonds and salt bridges candidates were predicted using OpenPyMol~\cite{schrodinger_pymol_2016} and evaluated for validity by manual inspection.
-Additional features used are the PROVEAN~\cite{choi_predicting_2012} and BLOSUM~\cite{henikoff_amino_1992} scores for a given amino acid change and the evolutionary conservation of the amino acid position. Conservation was obtained by generating a multiple alignment of direct functional orthologues across many eukaryotic species using CLUSTAL~\cite{russell_clustal_2014}, which was used as input for AMAS~\cite{livingstone_protein_1993}.
+Imputation of missing values was performed using \texttt{RandomForest} Regression~\cite{breiman_random_2001}. The following intrinsic features were generated: the confidence-weighted average fitness across mutations at the same position; the average fitness of multi-mutant clones that contain the mutation of interest; and the estimated fitness according to a multiplicative model to infer mutant fitness A using a double mutant AB and single mutant B.
+A second set of features was computed from differences between various chemical properties of the wildtype and mutant amino acids. These properties include size, volume, polarity, charge, and hydropathy.
+A third set of features is derived from the structural context of each amino acid position. These include secondary structure, solvent accessibility, burial in interfaces with different interaction partners, and involvement in hydrogen bonds or salt bridges with interaction partners. Secondary structures were calculated using \texttt{Stride}~\cite{frishman_knowledge-based_1995}. Solvent accessibility and interface burial were calculated using the \texttt{GETAREA} tool~\cite{fraczkiewicz_exact_1998} on the following PDB entries: \texttt{3UIP}~\cite{gareau_determinants_2012}; \texttt{4W5V}~\cite{reiter_characterization_2016}; \texttt{3KYD}~\cite{olsen_active_2010}; \texttt{2UYZ}~\cite{knipscheer_noncovalent_2007}; \texttt{4Y1L}~\cite{alontaga_rwd_2015}. Hydrogen bonds and salt bridges candidates were predicted using \texttt{OpenPyMol}~\cite{schrodinger_pymol_2016} and evaluated for validity by manual inspection.
+Additional features used are the PROVEAN~\cite{choi_predicting_2012} and BLOSUM~\cite{henikoff_amino_1992} scores for a given amino acid change and the evolutionary conservation of the amino acid position. Conservation was obtained by generating a multiple alignment of direct functional orthologues across many eukaryotic species using \texttt{CLUSTAL}~\cite{russell_clustal_2014}, which was used as input for \texttt{AMAS}~\cite{livingstone_protein_1993}.
 
-The machine-learning predictions resulting generated above were also used to regularize experimental measurements of lower confidence. To this end the corrected standard error associated with each data point can be used to determine the weight of assigned to the measurement, as follows:
-$$s'_\text{joint} = \frac{1}{\frac{1}{\sigma_{\bar x}^{(0)}}+\frac{1}{\sigma_{\bar x}^{(1)}}} \left (\frac{1}{\sigma_{\bar x}^{(0)}} s'_0 + \frac{1}{\sigma_{\bar x}^{(1)}}s'_1 \right ),$$
-where $s'_0$ is machine learning prediction, $\sigma_{\bar x}^{(0)}$ is the prediction standard error approximated by RMSD, $s'_1$ is the experimental fitness measurement, and $\sigma_{\bar x}^{(1)}$ is the assocated adjusted standard error.
+The machine learning predictions resulting generated above were also used to regularize experimental measurements of lower confidence. To this end, the corrected standard error associated with each data point can be used to determine the weight assigned to the measurement, as follows:
+ 
+\begin{align*}
+w_0 &= \frac{1}{1+\frac{\sigma_{\bar x}^{(0)}}{\sigma_{\bar x}^{(1)}}}; ~ w_1 = \frac{1}{1+\frac{\sigma_{\bar x}^{(1)}}{\sigma_{\bar x}^{(0)}}}\\
+\mu_\text{joint} &= w_0 \cdot \mu_0 + w_1 \cdot \mu_1\\
+\sigma_\text{joint} &= w_0 \cdot (\sigma_0^2 + \mu_0^2) + w_1 \cdot (\sigma_1^2 + \mu_1^2) - \mu_\text{joint}^2\\
+\sigma_{\bar x}^{(\text{joint})} &= \frac{\sigma_\text{joint}}{\sqrt{df_0 + df_1}}
+\end{align*}
+where $\mu_0$ is the measured value, $\sigma_0$ the associated standard deviation, $\sigma_{\bar x}^{(0)}$ the associated standard error, $df_0$ the associated degrees of freedom, $\mu_1$ is the RandomForest predicted value, $\sigma_1$ the associated standard deviation as approximated by cross-validation RMSD, $\sigma_{\bar x}^{(1)}$ the associated standard error, and $df_1$ the associated virtual degrees of freedom.
 
-The joining, imputation and regularization procedures are implemented as part of a larger DMS analysis package provided on the attached storage media. It is also available online\footnote{http://dalai.mshri.on.ca/$\sim$jweile/projects/popcodePipeline/doc}.
+The joining, imputation, and regularization procedures are implemented as part of a larger DMS analysis package provided on the attached storage media, and also available online\footnote{\url{http://dalai.mshri.on.ca/~jweile/projects/popcodePipeline/doc}}.
 
 \subsection{Complementation spotting assays}
-To validate the reliability of the fitness scores obtained during the screen, we selected a subset of clones from our original variant library that evenly covered the spectrum of scores present in the screen. After genotype verification using Sanger sequencing, \species{S. cerevisiae} \textit{ubc9-ts} strains were transformed, grown to saturation, spotted in 1/5 dilution steps and grown at the permissive and selective temperatures respectively for 48 hours in the presence of null and wildtype control. The laboratory procedures were performed by Jennifer Knapp. A custom software, PlateOrganizer, was developed to help organize and analyze image data from spotting assays. It is provided on the attached storage media and can also be found online\footnote{http://dalai.mshri.on.ca/$\sim$jweile/projects/PlateOrganizer/}.
+To validate the reliability of the fitness scores obtained during the screen, we selected a subset of clones from our original variant library that evenly covered the spectrum of scores present in the screen. After genotype verification using Sanger sequencing, \species{S. cerevisiae} \textit{ubc9-ts} strains were transformed, grown to saturation, spotted in 1/5 dilution steps, and grown at the permissive and selective temperatures respectively for 48 hours in the presence of null and wildtype control. The laboratory procedures were performed by Jennifer Knapp. I developed a custom software, PlateOrganizer, to organize and analyze image data from spotting assays. It is provided on the attached storage media and can also be found online\footnote{\url{http://dalai.mshri.on.ca/~jweile/projects/PlateOrganizer/}}.
 
