--- a/conclusion.tex
+++ b/conclusion.tex
@@ -25,7 +25,7 @@ Moreover, as mentioned in section~\ref{ch2discussion} of the previous chapter, w
 
 \subsection{Using DMS data in a clinical context}
 %DMS in clinical contexts
-As introduced in chapter 1, a major motivation factor behind the development of our framework is to address the growing problem of variants of uncertain significance observed in the clinic. While our results show that functional maps as produced by our framework can be helpful in the effort of VUS reclassification, a single line of evidence is not usually sufficient. Even though the ACMG considers functional assays among the strongest classification criteria, they require at least one additional criterium of moderate strength, such as enrichment in cases over controls, or negligible allele frequency in the general population~\cite{richards_standards_2015}. While most of the information informing the required criteria cannot be generated \textit{en masse}, other information, such as allele frequencies in the general population are available from the 1000 genomes project~\cite{the_1000_genomes_project_consortium_global_2015} and the genome and exome aggregation database (GnomAD)~\cite{lek_analysis_2016}. Thus an important goal for the future would be the construction of a public database with an underlying automatic data integration and classification system, that obtains information from available sources and automatically applies the ACMG's recommended decision-making process towards variant classification. Classification results should be presented transparently, revealing the individual underlying evidence, confidence levels and reasoning structure. 
+As introduced in chapter~\ref{ch:intro}, a major motivation factor behind the development of our framework is to address the growing problem of variants of uncertain significance observed in the clinic. While our results show that functional maps as produced by our framework can be helpful in the effort of VUS reclassification, a single line of evidence is not usually sufficient. Even though the ACMG considers functional assays among the strongest classification criteria, they require at least one additional criterium of moderate strength, such as enrichment in cases over controls, or negligible allele frequency in the general population~\cite{richards_standards_2015}. While most of the information informing the required criteria cannot be generated \textit{en masse}, other information, such as allele frequencies in the general population are available from the 1000 genomes project~\cite{the_1000_genomes_project_consortium_global_2015} and the genome and exome aggregation database (GnomAD)~\cite{lek_analysis_2016}. Thus an important goal for the future would be the construction of a public database with an underlying automatic data integration and classification system, that obtains information from available sources and automatically applies the ACMG's recommended decision-making process towards variant classification. Classification results should be presented transparently, revealing the individual underlying evidence, confidence levels and reasoning structure. 
 
 However, the commitment towards the construction of a resource is only warranted if its primary source of information, functional maps generated using Deep Mutational Scanning can continue to be provided. The Roth Lab is planning to continue building functional maps of disease genes and to expand the list of genes amenable to deep mutational scanning. A shortlist of $\sim$100 genes is planned to be addressed in the coming years. However, this undertaking is a costly one. Per 500 amino acid positions scanned, approximately \$5500 need to be spent on consumables, primarily for sequencing and oligos for POPCode mutagenesis. Assuming 6 genes being scanned in parallel, approximately 45 full-time employee hours need to be invested per gene. Ultimately, this undertaking cannot be stemmed by one lab alone and will require outreach to other groups. As shown in chapter~1 section~\ref{dmsIntro} a fair amount of groups are already performing deep mutational scans, who may be interested in collaboration. As a first step, the Roth and Fowler labs are already planning on collaborating with respect to mapping a number of heart-disease associated genes.
 
@@ -45,7 +45,7 @@ Hanane Ennajdaoui in the Roth Lab is currently working on adapting our DMS frame
 \subsection{Other uses of DMS functional map data}
 
 \subsubsection{Screening for viral suppressors}
-Deep Mutational Scanning has many other potential uses beyond disease variant classification. As we have demonstrated in chapter 3 for UBE2I, the method helps sheds light on the biophysical mechanisms underlying the function of a gene. We have also shown that using a combination of Y2H and complementation, DMS can point to potential new protein interaction interfaces. 
+Deep Mutational Scanning has many other potential uses beyond disease variant classification. As we have demonstrated in chapter~\ref{ch:data2} for UBE2I, the method helps sheds light on the biophysical mechanisms underlying the function of a gene. We have also shown that using a combination of Y2H and complementation, DMS can point to potential new protein interaction interfaces. 
 
 UBE2I is known to be directly targeted by many viruses, such as HIV, and EBV,  through specific protein-protein interactions to subvert host defenses~\cite{varadaraj_sumo_2014}. Using Y2H as the selection assay in our DMS framework and using our exising functional map of UBE2I as a reference, it would be possible to scan for variants that specifically disrupt interactions with viral proteins while not affecting overall UBE2I function. At the same time, this approach could help finding the specific interface for the interactions in question and could inform future drug development.
 
