--- a/introduction.tex
+++ b/introduction.tex
@@ -4,6 +4,7 @@
 %%  * emphasize outstanding questions 
 
 \chapter{Introduction}
+\label{ch:intro}
 
 Given the constantly improving cost and speed of genome sequencing, it is reasonable to expect that within the coming decades personal genomes will be known for a substantial part of the global populace. Unfortunately, our limited ability to interpret the variation within stands in stark contrast with this development. Even when only considering mutations in coding regions of the genome, the effects of most missense variants are not known. While a number of computational approaches exist to make predictions as to the effects of coding variants, they are currently not reliable enough for clinical use. By comparison, laboratory assays produce more trustworthy results, but until recently did not scale to the space of all possible mutations. The development of Deep Mutational Scanning~\cite{fowler_high-resolution_2010} has now made this endeavour possible. In the following sections, each of these issues will be discussed in more detail.
 
@@ -168,4 +169,4 @@ The thus loaded E2 can recognize potential target proteins via an exposed motif 
 Like ubiquitin, SUMO can also form chains (Figure \ref{fig:sumo_chaining}). However, of the four SUMO proteins encoded by the human genome, only SUMO2 and SUMO3 are capable of doing so, as they contain a suitable lysine residue within a disordered N-terminal tail~\cite{tatham_polymeric_2001}. Capili and Lima previously observed that the E2 (UBE2I) and SUMO can interact in a noncovalent manner via a distinct binding interface~\cite{capili_structure_2007}. According to a model proposed by Alontaga and colleagues~\cite{alontaga_rwd_2015} this interaction is a key mechanism in SUMO chain formation. The interaction recruits a second, SUMO-loaded E2 that interacts with the complex in such a manner that the lysine within the first SUMO's N-terminal tail can find its way into the active site of the second E2, where the second SUMO is concatenated. While the role of polySUMO chains in humans are still unclear, it has been shown that yeast deficient in SUMO chain formation are unable to perform meiosis~\cite{cheng_sumo_2006}.
 
 Given the complexity of the Sumoylation system, especially surrounding the E2 component, an examination of sequence-structure-function relationships becomes a multifaceted problem. Mutations could in principle affect any combination of the multiple interaction interfaces which in turn contribute in complex ways to the overall cellular phenotype.
-An alanine scan of the yeast SUMO E2 Ubc9 was previously performed and succeeded in identifying functionally important sites within the protein~\cite{bencsath_identification_2002}. Similarly, a DMS scan of ubiquitin was previously completed~\cite{roscoe_analyses_2013}. While both of these projects provided great insight into the biochemistry of ubiquitin-like protein pathways, neither has produced a complete map. The Deep Mutational Scanning Framework we will discuss in chapter 2 enabled us to not only recapitulate many of the known mechansims in SUMO and its E2, but also to uncover new details about their biochemistry, as will be discussed in chapter 3.
+An alanine scan of the yeast SUMO E2 Ubc9 was previously performed and succeeded in identifying functionally important sites within the protein~\cite{bencsath_identification_2002}. Similarly, a DMS scan of ubiquitin was previously completed~\cite{roscoe_analyses_2013}. While both of these projects provided great insight into the biochemistry of ubiquitin-like protein pathways, neither has produced a complete map. The Deep Mutational Scanning Framework we will discuss in chapter~\ref{ch:data1} enabled us to not only recapitulate many of the known mechansims in SUMO and its E2, but also to uncover new details about their biochemistry, as will be discussed in chapter~\ref{ch:data2}.
