last changes to draft 1

--- a/main.tex
+++ b/main.tex
@@ -12,7 +12,7 @@
 \department{Molecular Genetics}
 \gradyear{2017}
 \author{Jochen Weile}
-\title{An atlas of variant effects in human disease genes}
+\title{Extending the Atlas of Variant Effects in Human Disease Genes}
 
 \newcommand{\gene}[1]{\textit{#1}}
 \newcommand{\species}[1]{\textit{#1}}
